desktop hero section was added

--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -1,8 +1,8 @@
-<header>
-  <div class="logo-container">
-    <div class="logo">
-    
-    </div>
+<header class="header">
+  <div class="header__logo-container">
+    <svg class="logo">
+      <use xlink:href="img/sprite.svg#logo_header"></use>
+    </svg>
   </div>
   <nav class="main-nav" role="navigation">
     <ul class="main-nav__list">
@@ -26,4 +26,14 @@
       </li>
     </ul>
   </nav>
+  <div class="header__contacts">
+    <div class="header__icon-container">
+      <svg class="icon icon--ln">
+        <use xlink:href="img/sprite.svg#icon_ln"></use>
+      </svg>
+    </div>
+    <div class="header__btn-container">
+      <button class="btn">contact us</button>
+    </div>
+  </div>
 </header>
