--- a/source/html_blocks/hero/hero.html
+++ b/source/html_blocks/hero/hero.html
@@ -1,16 +1,15 @@
 <section class="hero">
   
-      <!--Header start-->
-      //= ../header/header.html
-      <!--Header end--><div class="container">
-      <div class="row">
+  <!--Header start-->
+  //= ../header/header.html
+  <!--Header end-->
       <div class="hero__title-container">
-        <strong class="hero__title">
-          We have Best Medicare plan options for you
-        </strong>
-        <p class="hero__text">Sed cursus nisl praesent vulputate dapibus sociis. Nibh integer. Nec facilisis, natoque augue dictum purus lorem phasellus tempor.</p>
-        <a href="" class="hero__btn  btn">Read more</a>
+        <div class="hero__title-icon">
+        
+        </div>
+        <h1 class="hero__title">Prepare your business for the digital future in <strong
+          class="hero__title hero__title--accent">Tax
+                                Compliance</strong>
+                                and Regulatory Reporting</h1>
       </div>
-    </div>
-  </div>
 </section>
