--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,1 +1,5 @@
-<h1>Hello!</h1>
+<section class="features">
+  <div class="container">
+    <h2 class="features__title">What can we do for you?</h2>
+  </div>
+</section>
