--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -7,22 +7,22 @@
   <nav class="main-nav" role="navigation">
     <ul class="main-nav__list">
       <li class="main-nav__item">
-        <span href="#" class="main-nav__link  main-nav__link--active">Home</span>
+        <a href="#home" class="main-nav__link">Home</a>
       </li>
       <li class="main-nav__item">
-        <a href="#about" class="main-nav__link">Company</a>
+        <a href="#company" class="main-nav__link">Company</a>
       </li>
       <li class="main-nav__item">
-        <a href="#services" class="main-nav__link">KST Solutions</a>
+        <a href="#solutions" class="main-nav__link">KST Solutions</a>
       </li>
       <li class="main-nav__item">
-        <a href="#gallery" class="main-nav__link">Resources</a>
+        <a href="#resources" class="main-nav__link">Resources</a>
       </li>
       <li class="main-nav__item">
-        <a href="#ourTeam" class="main-nav__link">Coverage</a>
+        <a href="#coverage" class="main-nav__link">Coverage</a>
       </li>
       <li class="main-nav__item">
-        <a href="#contacts" class="main-nav__link">About us</a>
+        <a href="#about" class="main-nav__link">About us</a>
       </li>
     </ul>
   </nav>
