--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -11,37 +11,67 @@
                                                                            eGovernment (B2G) needs.
       </p>
     </div>
-    <div class="row">
+    <div class="dropdown-row">
       <div class="dropdown-container">
-        <div class="dropdown">
+        <div class="dropdown dropdown--teal">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
           <p class="dropdown__text">Indirect Tax</p>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown">
-          <p class="dropdown__text">Indirect Tax</p>
+        <div class="dropdown dropdown--orange">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
+          <p class="dropdown__text">Tax Technology</p>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown">
-          <p class="dropdown__text">Indirect Tax</p>
+        <div class="dropdown dropdown--dark-gray">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
+          <p class="dropdown__text">Embedded Analytics</p>
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="dropdown-row">
       <div class="dropdown-container">
-        <div class="dropdown">
-          <p class="dropdown__text">Indirect Tax</p>
+        <div class="dropdown dropdown--black">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
+          <p class="dropdown__text">Risk Management</p>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown">
-          <p class="dropdown__text">Indirect Tax</p>
+        <div class="dropdown dropdown--light-gray">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
+          <p class="dropdown__text">Transfer Pricing</p>
         </div>
       </div>
       <div class="dropdown-container">
-        <div class="dropdown">
-          <p class="dropdown__text">Indirect Tax</p>
+        <div class="dropdown dropdown--dark-blue">
+          <div class="dropdown__icon-container">
+            <svg class="dropdown__icon">
+              <use xlink:href="img/sprite.svg#dropdown_lines"></use>
+            </svg>
+          </div>
+          <p class="dropdown__text">Statutory Reporting</p>
         </div>
       </div>
     </div>
@@ -65,18 +95,34 @@
       </p>
     </div>
     <div class="solutions-container">
-      <div class="solutions solutions--premise">
-        <h4 class="solutions__title">On premise</h4>
+      <div class="solutions__row">
+        <div class="solutions solutions--premise">
+          <h4 class="solutions__title">On premise</h4>
+          <p class="solutions__text solutions__text--smaller">
+            <strong
+              class="solutions__text solutions__text solutions__text--accent solutions__text--smaller"
+            >KST
+            </strong>
+            can be deployed on your infrastructure
+          </p>
+        </div>
+        <div class="solutions solutions--cloud">
+          <h4 class="solutions__title">On cloud</h4>
+          <p class="solutions__text solutions__text--smaller">
+            <strong
+              class="solutions__text solutions__text solutions__text--accent solutions__text--smaller"
+            >KST
+            </strong>
+            available on the cloud for agile, secure & rapid deployment
+          </p>
+        </div>
+      </div>
       
-      </div>
-      <div class="solutions solutions--cloud">
-        <h4 class="solutions__title">On cloud</h4>
-      </div>
       <ul class="solutions__list">
-        <li class="solutions__item">eInvoicing</li>
-        <li class="solutions__item">eAccounting</li>
-        <li class="solutions__item">eLedger</li>
-        <li class="solutions__item">eGovernment</li>
+        <li class="solutions__item"><span>e</span>Invoicing</li>
+        <li class="solutions__item"><span>e</span>Accounting</li>
+        <li class="solutions__item"><span>e</span>Ledger</li>
+        <li class="solutions__item"><span>e</span>Government</li>
       </ul>
     </div>
     <h2 class="heading heading--teal">How does it work</h2>
@@ -162,7 +208,7 @@
   </div>
 </section>
 <!--Solutions section end-->
-<!--Solutions section start-->
+<!--Resources section start-->
 <section id="resources" class="resources-section">
   <div class="container">
     <div class="resources__top-container">
@@ -220,7 +266,7 @@
 <!--Solutions section end-->
 <!--Global coverage section start-->
 
-<section class="map-section">
+<section id="coverage" class="map-section">
   <div class="map__top">
     <h2 class="heading heading--white">Global Coverage</h2>
     <nav class="map__nav">
@@ -255,7 +301,7 @@
 </section>
 <!--Global coverage section end-->
 <!--About us section start-->
-<section class="about-section">
+<section id="about" class="about-section">
   <div class="container">
     <div class="about__heading-container">
       <h2 class="heading heading--teal">About us</h2>
