cards was added

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -125,57 +125,72 @@
         <li class="solutions__item"><span>e</span>Government</li>
       </ul>
     </div>
-    <h2 class="heading heading--teal">How does it work</h2>
+    <h2 class="heading heading--teal mb-4">How does it work</h2>
     <p class="solutions__text">
       To meet today’s tsunami of highly disruptive and ever growing government legislation,
-      <strong class="solutions__text solutions__text--accent">KS Tax manages your
-                                                              eGovernment submissions
-                                                              end to end.</strong>
+      <strong class="solutions__text solutions__text--accent display-b mb-7">KS Tax manages your
+                                                                        eGovernment submissions
+                                                                        end to end.</strong>
     </p>
     <div class="row">
-      <div class="solutions__cards-container">
-        <div class="solutions__cards">
-          <div class="card">
-            <div class="card__top-container">
-              <div class="card__icon"></div>
-              <span class="card__number">1</span>
+      <div class="cards-container">
+        <div class="card card--white">
+          <div class="card__top-container">
+            <div class="card__icon-container">
+              <svg class="card__icon">
+                <use xlink:href="img/sprite.svg#docs"></use>
+              </svg>
             </div>
-            <h3 class="card__title">Collect &
-                                    Gather</h3>
-            <ul class="card__list">
-              <li class="card__item">Gather data from existing system</li>
-              <li class="card__item">Carry out extensive data validation</li>
-              <li class="card__item">Prepare data for storage</li>
-            </ul>
+            <span class="card__number card__number--dark-blue">1</span>
           </div>
-          <div class="card">
-            <div class="card__top-container">
-              <div class="card__icon"></div>
-              <span class="card__number">2</span>
-            </div>
-            <h3 class="card__title">Collect &
-                                    Gather</h3>
-            <ul class="card__list">
-              <li class="card__item">Gather data from existing system</li>
-              <li class="card__item">Carry out extensive data validation</li>
-              <li class="card__item">Prepare data for storage</li>
-            </ul>
-          </div>
-          <div class="card">
-            <div class="card__top-container">
-              <div class="card__icon"></div>
-              <span class="card__number">3</span>
-            </div>
-            <h3 class="card__title">Collect &
-                                    Gather</h3>
-            <ul class="card__list">
-              <li class="card__item">Gather data from existing system</li>
-              <li class="card__item">Carry out extensive data validation</li>
-              <li class="card__item">Prepare data for storage</li>
-            </ul>
-          </div>
+          <h3 class="card__title card__title--dark-blue">Collect &
+                                  Gather</h3>
+          <ul class="card__list card__list--dark-gray">
+            <li class="card__item">Gather data from existing system</li>
+            <li class="card__item">Carry out extensive data validation</li>
+            <li class="card__item">Prepare data for storage</li>
+          </ul>
         </div>
       </div>
+      <div class="cards-container cards-container--wider">
+        <div class="card card--dark-blue">
+          <div class="card__top-container">
+            <div class="card__icon-container">
+              <svg class="card__icon">
+                <use xlink:href="img/sprite.svg#list"></use>
+              </svg>
+            </div>
+            <span class="card__number card__number--teal">2</span>
+          </div>
+          <h3 class="card__title card__title--wide">Prepare, Submit & Validate
+          </h3>
+          <ul class="card__list card__list--light-gray">
+            <li class="card__item">Collect & Clean</li>
+            <li class="card__item">Validate prior to submission</li>
+            <li class="card__item">One touch submission</li>
+          </ul>
+        </div>
+      </div>
+      <div class="cards-container">
+        <div class="card card--orange">
+          <div class="card__top-container">
+            <div class="card__icon-container">
+              <svg class="card__icon">
+                <use xlink:href="img/sprite.svg#university"></use>
+              </svg>
+            </div>
+            <span class="card__number card__number--white">3</span>
+          </div>
+          <h3 class="card__title">Clarify &
+                                  Confirm</h3>
+          <ul class="card__list card__list--black">
+            <li class="card__item">Real time two way communication</li>
+            <li class="card__item">Full error and status management</li>
+            <li class="card__item">Integrated global analytics</li>
+          </ul>
+        </div>
+      </div>
+    
     </div>
     <div class="solutions__scheme">
       <div class="scheme__text-container">
