solutions section was added

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -129,8 +129,8 @@
     <p class="solutions__text">
       To meet today’s tsunami of highly disruptive and ever growing government legislation,
       <strong class="solutions__text solutions__text--accent display-b mb-7">KS Tax manages your
-                                                                        eGovernment submissions
-                                                                        end to end.</strong>
+                                                                             eGovernment submissions
+                                                                             end to end.</strong>
     </p>
     <div class="row">
       <div class="cards-container">
@@ -144,7 +144,7 @@
             <span class="card__number card__number--dark-blue">1</span>
           </div>
           <h3 class="card__title card__title--dark-blue">Collect &
-                                  Gather</h3>
+                                                         Gather</h3>
           <ul class="card__list card__list--dark-gray">
             <li class="card__item">Gather data from existing system</li>
             <li class="card__item">Carry out extensive data validation</li>
@@ -192,9 +192,19 @@
       </div>
     
     </div>
-    <div class="solutions__scheme">
-      <div class="scheme__text-container">
-        <h3 class="scheme__title">Integrated Dashboard</h3>
+    <div class="scheme">
+      <div class="scheme__top">
+        <span class="scheme__arrow  scheme__arrow--top">&nbsp;</span>
+        <span class="scheme__arrow  scheme__arrow--bot">&nbsp;</span>
+      </div>
+      <div class="scheme__mid">
+        <span class="scheme__arrow scheme__arrow--left-side">&nbsp;</span>
+        <div class="scheme__text-container">
+          <h3 class="scheme__title">Integrated Dashboard</h3>
+        </div>
+        <span class="scheme__arrow scheme__arrow--right-side">&nbsp;</span>
+      </div>
+      <div class="scheme__bot">
         <p class="scheme__text">For real time view of your
                                 submissions globally</p>
       </div>
@@ -210,15 +220,17 @@
       </p>
     </div>
     <div class="solutions__analytics-container">
-      <h2 class="heading">Embedded Analytics</h2>
-      <p class="solutions__text">
-        Our <strong class="solutions__text solutions__text--accent-teal">analytics and reporting
-                                                                         solution</strong>,
-        ensures you are
-        always up to date
-        with your
-        compliance status globally, both at operational and risk management level.
-      </p>
+      <h2 class="heading mb-2">Embedded Analytics</h2>
+      <div class="solutions__analytics-text-container">
+        <p class="solutions__text">
+          Our <strong class="solutions__text solutions__text--accent-teal">analytics and reporting
+                                                                           solution</strong>,
+          ensures you are
+          always up to date
+          with your
+          compliance status globally, both at operational and risk management level.
+        </p>
+      </div>
     </div>
   </div>
 </section>
