about us section was added

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -335,42 +335,65 @@
       <h2 class="heading heading--white">Who is behind Kanuni</h2>
     </div>
     <div class="about__team">
-      <ul class="about__team-container">
-        <li class="person">
-          <div class="person__image-container">
-            <picture>
-              <img src="" alt="CEO Photo" class="person__image">
-            </picture>
+      <ul class="about__team-row">
+        <li class="person-container">
+          <div class="person">
+            <div class="person__image-container">
+              <picture>
+                <img src="img/webp/ceo_photo1x.jpg" alt="CEO Photo" class="person__image">
+              </picture>
+            </div>
+            <span class="person__name">Samuel Edwards</span>
+            <span class="person__position">CEO Kanuni</span>
+            <button class="btn btn--orange person__btn">
+              Contact
+            </button>
           </div>
-          <span class="person__name">Samuel Edwards</span>
-          <span class="person__position">CEO Kanuni</span>
         </li>
-        <li class="person">
-          <div class="person__image-container">
-            <picture>
-              <img src="" alt="CEO Photo" class="person__image">
-            </picture>
+        <li class="person-container">
+          <div class="person">
+            <div class="person__image-container">
+              <picture>
+                <img src="img/webp/manager_director_photo1x.jpg" alt="CEO Photo"
+                     class="person__image">
+              </picture>
+            </div>
+            <span class="person__name">Margaret Anderson</span>
+            <span class="person__position">Manager Director</span>
+             <button class="btn btn--orange person__btn">
+              Contact
+            </button>
           </div>
-          <span class="person__name">Margaret Anderson</span>
-          <span class="person__position">Manager Director</span>
         </li>
-        <li class="person">
-          <div class="person__image-container">
-            <picture>
-              <img src="" alt="CEO Photo" class="person__image">
-            </picture>
+        
+        <li class="person-container">
+          <div class="person">
+            <div class="person__image-container">
+              <picture>
+                <img src="img/webp/financial_director_photo1x.jpg" alt="CEO Photo"
+                     class="person__image">
+              </picture>
+            </div>
+            <span class="person__name">Arthur Davis</span>
+            <span class="person__position">Financial director</span>
+             <button class="btn btn--orange person__btn">
+              Contact
+            </button>
           </div>
-          <span class="person__name">Arthur Davis</span>
-          <span class="person__position">Financial director</span>
         </li>
-        <li class="person">
-          <div class="person__image-container">
-            <picture>
-              <img src="" alt="CEO Photo" class="person__image">
-            </picture>
+        <li class="person-container">
+          <div class="person">
+            <div class="person__image-container">
+              <picture>
+                <img src="img/webp/hr_director_photo1x.jpg" alt="CEO Photo" class="person__image">
+              </picture>
+            </div>
+            <span class="person__name">Jennifer Griffin</span>
+            <span class="person__position">HR Director</span>
+             <button class="btn btn--orange person__btn">
+              Contact
+            </button>
           </div>
-          <span class="person__name">Jennifer Griffin</span>
-          <span class="person__position">HR Director</span>
         </li>
       </ul>
     </div>
