--- a/source/html_blocks/footer/footer.html
+++ b/source/html_blocks/footer/footer.html
@@ -1,55 +1,59 @@
 <footer class="footer">
   <div class="container">
-    <div class="row">
-      <div class="footer__company">
-        <div class="footer__logo-container">
-        
+    <div class="footer__content">
+      <div class="row">
+        <div class="footer__company">
+          <div class="footer__logo-container">
+            <svg class="footer__logo">
+              <use xlink:href="img/sprite.svg#logo_header_sticky"></use>
+            </svg>
+          </div>
+          <div class="footer__company-text-container">
+            <p class="footer__company-text">Your
+              <strong class="footer__company-text footer__company-text--accent">Tax
+                                                                                Compliance</strong> and
+                                            Regulatory Reporting
+                                            partners</p>
+          </div>
         </div>
-        <div class="footer__company-text-container">
-          <p class="footer__company-text">Your
-            <strong class="footer__company-text footer__company-text--accent">Tax
-                                                                              Compliance</strong>and
-                                          Regulatory Reporting
-                                          partners</p>
+        <div class="footer__contacts">
+          <h4 class="footer__contacts-title">Headquarter
+          </h4>
+          <p class="footer__contacts-text">
+            Chemin de Blandonnet 8
+            1214 Vernier, Switzerland
+          </p>
+          <a href="#" class="footer__contacts-phone">+41 787 1500</a>
+          <div class="footer__btn-container">
+            <a href="#" class="btn footer__btn">View map</a>
+          </div>
+          <div class="footer__social-container">
+            <p>follow us</p>
+            <a href="#" class="footer__social-link">
+              Linkedin
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="footer__contacts">
-        <h4 class="footer__contacts-title">Headquarter
-        </h4>
-        <p class="footer__contacts-text">
-          Chemin de Blandonnet 8
-          1214 Vernier, Switzerland
-        </p>
-        <a href="#" class="footer__contacts-phone">+41 787 1500</a>
-        <div class="footer__btn-container">
-          <a href="#" class="btn footer__btn">View map</a>
-        </div>
-        <div class="footer__social-container">
-          <p>follow us</p>
-          <a href="#" class="footer__social-link">
-            Linkedin
-          </a>
-        </div>
-      </div>
-      <div class="foooter__form-container">
-        <form action="#" class="footer__form">
-          <input type="text" placeholder="Name*">
-          <input type="text" placeholder="email*">
-          <input type="text" placeholder="Your message">
-          <input type="submit" name="send" value="send" class="btn footer__form-btn">
-        </form>
-      </div>
-    </div>
-  </div>
-  <div class="footer__bottom">
-    <div class="container">
-      <div class="footer__bottom-row">
-        <p class="footer__copyright">&copy; 2018 Kanuni. All</p>
-        <div class="footer__sitemap-container">
-          <span class="footer__sitemap-text">Sitemap</span>
-          <span class="footer__sitemap-text">Legal</span>
+        <div class="footer__form-container">
+          <form action="#" class="footer__form">
+            <input type="text" placeholder="Name*">
+            <input type="text" placeholder="email*">
+            <input type="text" placeholder="Your message">
+            <input type="submit" name="send" value="send" class="btn footer__form-btn">
+          </form>
         </div>
       </div>
     </div>
   </div>
+    <div class="footer__bottom">
+      <div class="container">
+        <div class="footer__bottom-row">
+          <p class="footer__copyright">&copy; 2018 Kanuni. All</p>
+          <div class="footer__sitemap-container">
+            <span class="footer__sitemap-text">Sitemap</span>
+            <span class="footer__sitemap-text">Legal</span>
+          </div>
+        </div>
+      </div>
+    </div>
 </footer>
