nav-bar was added

--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="home">
   <div class="header__logo-container">
     <svg class="logo">
       <use xlink:href="img/sprite.svg#logo_header"></use>
@@ -10,7 +10,7 @@
         <a href="#home" class="main-nav__link">Home</a>
       </li>
       <li class="main-nav__item">
-        <a href="#company" class="main-nav__link">Company</a>
+        <a href="#company" class="main-nav__link" data-ps2id-offset="100">Company</a>
       </li>
       <li class="main-nav__item">
         <a href="#solutions" class="main-nav__link">KST Solutions</a>
@@ -27,11 +27,11 @@
     </ul>
   </nav>
   <div class="header__contacts">
-    <div class="header__icon-container">
+    <a href="#" class="header__icon-container">
       <svg class="icon icon--ln">
         <use xlink:href="img/sprite.svg#icon_ln"></use>
       </svg>
-    </div>
+    </a>
     <div class="header__btn-container">
       <button class="btn">contact us</button>
     </div>
