--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,3 +1,44 @@
+<!--nav-bar start-->
+<div class="nav-bar">
+  <div class="nav-bar__logo-container">
+    <svg class="logo">
+      <use xlink:href="img/sprite.svg#logo_header_sticky"></use>
+    </svg>
+  </div>
+  <nav class="main-nav" role="navigation">
+    <ul class="main-nav__list">
+      <li class="main-nav__item">
+        <a href="#home" class="main-nav__link  main-nav__link--bar">Home</a>
+      </li>
+      <li class="main-nav__item">
+        <a href="#company" class="main-nav__link  main-nav__link--bar" data-ps2id-offset="100">Company</a>
+      </li>
+      <li class="main-nav__item">
+        <a href="#solutions" class="main-nav__link  main-nav__link--bar">KST Solutions</a>
+      </li>
+      <li class="main-nav__item">
+        <a href="#resources" class="main-nav__link  main-nav__link--bar">Resources</a>
+      </li>
+      <li class="main-nav__item">
+        <a href="#coverage" class="main-nav__link  main-nav__link--bar">Coverage</a>
+      </li>
+      <li class="main-nav__item">
+        <a href="#about" class="main-nav__link  main-nav__link--bar">About us</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="header__contacts">
+    <a href="#" class="header__icon-container">
+      <svg class="icon icon--black">
+        <use xlink:href="img/sprite.svg#icon_ln"></use>
+      </svg>
+    </a>
+    <div class="header__btn-container">
+      <button class="btn">contact us</button>
+    </div>
+  </div>
+</div>
+<!--nav-bar end-->
 <!--Features section start-->
 <section id="company" class="features-section">
   <div class="container">
