fix nav bar, map, articles

--- a/source/html_blocks/content/content.html
+++ b/source/html_blocks/content/content.html
@@ -1,43 +1,43 @@
 <!--nav-bar start-->
-<div class="nav-bar">
-  <div class="nav-bar__logo-container">
-    <svg class="logo">
-      <use xlink:href="img/sprite.svg#logo_header_sticky"></use>
-    </svg>
-  </div>
-  <nav class="main-nav" role="navigation">
-    <ul class="main-nav__list">
-      <li class="main-nav__item">
-        <a href="#home" class="main-nav__link  main-nav__link--bar">Home</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#company" class="main-nav__link  main-nav__link--bar" data-ps2id-offset="100">Company</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#solutions" class="main-nav__link  main-nav__link--bar">KST Solutions</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#resources" class="main-nav__link  main-nav__link--bar">Resources</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#coverage" class="main-nav__link  main-nav__link--bar">Coverage</a>
-      </li>
-      <li class="main-nav__item">
-        <a href="#about" class="main-nav__link  main-nav__link--bar">About us</a>
-      </li>
-    </ul>
-  </nav>
-  <div class="header__contacts">
-    <a href="#" class="header__icon-container">
-      <svg class="icon icon--black">
-        <use xlink:href="img/sprite.svg#icon_ln"></use>
-      </svg>
-    </a>
-    <div class="header__btn-container">
-      <button class="btn">contact us</button>
-    </div>
-  </div>
-</div>
+<!--<div class="nav-bar">-->
+<!--<div class="nav-bar__logo-container">-->
+<!--<svg class="logo">-->
+<!--<use xlink:href="img/sprite.svg#logo_header_sticky"></use>-->
+<!--</svg>-->
+<!--</div>-->
+<!--<nav class="main-nav" role="navigation">-->
+<!--<ul class="main-nav__list">-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#home" class="main-nav__link  main-nav__link&#45;&#45;bar">Home</a>-->
+<!--</li>-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#company" class="main-nav__link  main-nav__link&#45;&#45;bar" data-ps2id-offset="100">Company</a>-->
+<!--</li>-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#solutions" class="main-nav__link  main-nav__link&#45;&#45;bar">KST Solutions</a>-->
+<!--</li>-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#resources" class="main-nav__link  main-nav__link&#45;&#45;bar">Resources</a>-->
+<!--</li>-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#coverage" class="main-nav__link  main-nav__link&#45;&#45;bar">Coverage</a>-->
+<!--</li>-->
+<!--<li class="main-nav__item">-->
+<!--<a href="#about" class="main-nav__link  main-nav__link&#45;&#45;bar">About us</a>-->
+<!--</li>-->
+<!--</ul>-->
+<!--</nav>-->
+<!--<div class="header__contacts">-->
+<!--<a href="#" class="header__icon-container">-->
+<!--<svg class="icon icon&#45;&#45;black">-->
+<!--<use xlink:href="img/sprite.svg#icon_ln"></use>-->
+<!--</svg>-->
+<!--</a>-->
+<!--<div class="header__btn-container">-->
+<!--<button class="btn">contact us</button>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 <!--nav-bar end-->
 <!--Features section start-->
 <section id="company" class="features-section">
@@ -62,6 +62,15 @@
           </div>
           <p class="dropdown__text">Indirect Tax</p>
         </div>
+        <div class="dropdown__content  dropdown__content--teal">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
+        </div>
       </div>
       <div class="dropdown-container">
         <div class="dropdown dropdown--orange">
@@ -72,6 +81,15 @@
           </div>
           <p class="dropdown__text">Tax Technology</p>
         </div>
+        <div class="dropdown__content dropdown__content--orange">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
+        </div>
       </div>
       <div class="dropdown-container">
         <div class="dropdown dropdown--dark-gray">
@@ -81,6 +99,15 @@
             </svg>
           </div>
           <p class="dropdown__text">Embedded Analytics</p>
+        </div>
+        <div class="dropdown__content dropdown__content--dark-gray">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -94,6 +121,15 @@
           </div>
           <p class="dropdown__text">Risk Management</p>
         </div>
+        <div class="dropdown__content dropdown__content--black">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
+        </div>
       </div>
       <div class="dropdown-container">
         <div class="dropdown dropdown--light-gray">
@@ -104,6 +140,15 @@
           </div>
           <p class="dropdown__text">Transfer Pricing</p>
         </div>
+        <div class="dropdown__content dropdown__content--light-gray">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
+        </div>
       </div>
       <div class="dropdown-container">
         <div class="dropdown dropdown--dark-blue">
@@ -113,6 +158,15 @@
             </svg>
           </div>
           <p class="dropdown__text">Statutory Reporting</p>
+        </div>
+        <div class="dropdown__content dropdown__content--dark-blue">
+          <ul class="dropdown__list">
+            <li class="dropdown__item">BEPS</li>
+            <li class="dropdown__item">CBCO</li>
+            <li class="dropdown__item">INtercompany</li>
+            <li class="dropdown__item">PIEI</li>
+            <li class="dropdown__item">Manager TP’S</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -289,29 +343,43 @@
                                                                                      updates.
         </p>
       </div>
-      <div class="resource__form">
+      <div class="resources__form">
         <form action="#">
-          <input type="text" class="form__email" placeholder="your email address">
+          <div class="form__input-wrapper" tabindex="0">
+            <input type="text" class="form__input form__input--resource"
+                   placeholder="your email address">
+            <button type="submit" class="btn btn--resources">&nbsp;</button>
+          </div>
         </form>
       </div>
     </div>
-    <div class="resource__filter-container">
+    <div class="resources__filter-container">
       <ul class="filter">
-        <li class="filter__list">Global</li>
-        <li class="filter__list">Brazil</li>
-        <li class="filter__list">Poland</li>
-        <li class="filter__list">Spain</li>
-        <li class="filter__list">Norway</li>
+        <li class="filter__item">
+          <a href="#" class="filter__link">Global</a>
+        </li>
+        <li class="filter__item">
+          <a href="#" class="filter__link">Brazil</a>
+        </li>
+        <li class="filter__item">
+          <a href="#" class="filter__link">Poland</a>
+        </li>
+        <li class="filter__item">
+          <a href="#" class="filter__link">Spain</a>
+        </li>
+        <li class="filter__item">
+          <a href="#" class="filter__link">Norway</a>
+        </li>
       </ul>
     </div>
-    <div class="resource__progress-scroll-container">
+    <div class="resources__progress-scroll-container">
     
     </div>
-    <div class="resource__articles-container">
-      <div class="resource__articles">
+    <div class="resources__articles-container">
+      <div class="resources__articles">
         <div class="article">
           <figure>
-            <img src="" alt="Norway" class="article__image">
+            <img src="img/webp/norway.jpg" alt="Norway" class="article__image">
           </figure>
           <span class="article__country">
             Norway
@@ -323,9 +391,47 @@
             SAF-T, an initiative led the Organisation for Economic Co-operation and Development
             (OECD)…
           </p>
-          <span class="article__more">
-            read more
+          <a href="#" class="article__link">
+            Read more
+          </a>
+        </div>
+      </div>
+      <div class="resources__articles">
+        <div class="article">
+          <figure>
+            <img src="img/webp/italy.jpg" alt="Norway" class="article__image">
+          </figure>
+          <span class="article__country">
+            Italy
           </span>
+          <h4 class="article__title">
+            Italian Budget Law introduces mandatory E-invoicing
+          </h4>
+          <p class="article__text">
+            Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus…
+          </p>
+          <a href="#" class="article__link">
+            Read more
+          </a>
+        </div>
+      </div>
+      <div class="resources__articles">
+        <div class="article">
+          <figure>
+            <img src="img/webp/poland.jpg" alt="Norway" class="article__image">
+          </figure>
+          <span class="article__country">
+            Poland
+          </span>
+          <h4 class="article__title">
+            VAT Registers and JPK Extracts for Poland ready for July 2018
+          </h4>
+          <p class="article__text">
+            Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus…
+          </p>
+          <a href="#" class="article__link">
+            Read more
+          </a>
         </div>
       </div>
     </div>
@@ -335,18 +441,20 @@
 <!--Global coverage section start-->
 
 <section id="coverage" class="map-section">
-  <div class="map__top">
-    <h2 class="heading heading--white">Global Coverage</h2>
-    <nav class="map__nav">
-      <ul class="map__list">
-        <li class="map__item">
-          <a href="" class="map__link">Map</a>
-        </li>
-        <li class="map__item">
-          <a href="" class="map__link">view list</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="container">
+    <div class="map__top">
+      <h2 class="heading heading--white heading--left">Global Coverage</h2>
+      <nav class="map__nav">
+        <ul class="map__list">
+          <li class="map__item">
+            <a href="#" class="map__link">Map</a>
+          </li>
+          <li class="map__item">
+            <a href="#" class="map__link">view list</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
   <div class="map">
     <div class="map__controls">
@@ -401,7 +509,7 @@
             </div>
             <span class="person__name">Margaret Anderson</span>
             <span class="person__position">Manager Director</span>
-             <button class="btn btn--orange person__btn">
+            <button class="btn btn--orange person__btn">
               Contact
             </button>
           </div>
@@ -417,7 +525,7 @@
             </div>
             <span class="person__name">Arthur Davis</span>
             <span class="person__position">Financial director</span>
-             <button class="btn btn--orange person__btn">
+            <button class="btn btn--orange person__btn">
               Contact
             </button>
           </div>
@@ -431,7 +539,7 @@
             </div>
             <span class="person__name">Jennifer Griffin</span>
             <span class="person__position">HR Director</span>
-             <button class="btn btn--orange person__btn">
+            <button class="btn btn--orange person__btn">
               Contact
             </button>
           </div>
