--- a/source/html_blocks/header/header.html
+++ b/source/html_blocks/header/header.html
@@ -1,5 +1,8 @@
 <header class="header" id="home">
   <div class="header__logo-container">
+    <svg class="logo--nav-bar">
+      <use xlink:href="img/sprite.svg#logo_header_sticky"></use>
+    </svg>
     <svg class="logo">
       <use xlink:href="img/sprite.svg#logo_header"></use>
     </svg>
